fixed navbar overlap

--- a/iwd-app/src/components/navbar/navbar.css
+++ b/iwd-app/src/components/navbar/navbar.css
@@ -3,6 +3,7 @@
   position: fixed;
   display: flex;
   flex-direction: column;
+  z-index: 1000;
 }
 
 * {
